styles.css
/* Outfit font-family import */
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');

/* Master Reset */
* {
    padding: 0;
    margin: 0;
    border: 0;
    box-sizing: border-box;
}

/* # Variables */
:root {

    /* ## Colors */

    /* ### Primary */

    --SOFTBLUE: hsl(215, 51%, 70%);
    --CYAN: hsl(178, 100%, 50%);

    /* ### Neutral */

    --VERYDARKBLUEMBG: hsl(217, 54%, 11%);
    /* (main BG) */
    --VERYDARKBLUECBG: hsl(216, 50%, 16%);
    /* (card BG) */
    --VERYDARKBLUELINE: hsl(215, 32%, 27%);
    /* (line) */
    --WHITE: hsl(0, 0%, 100%);

}

body {
    background-color: var(--VERYDARKBLUEMBG);
    color: var(--WHITE);
    font-family: 'Outfit', sans-serif;
    font-weight: 400;
}


.card {
    background-color: var(--VERYDARKBLUECBG);
    border-radius: 15px;
    display: flex;
    flex-flow: column;
    height: 540px;
    justify-content: space-between;
    left: 50%;
    padding: 25px;
    position: absolute;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 330px;
}

img {
    border-radius: 10px;
    width: 280px;
}


.auction {
    display: flex;
    justify-content: space-between;
}

p.price::before{
    content: "";
    display: block;
    background: url("images/icon-ethereum.svg") no-repeat;
    width: 20px;
    height: 20px;
    float: left;
    margin: 0 6px 0 0;
}

p.time::before{
    content: "";
    display: block;
    background: url("images/icon-clock.svg") no-repeat;
    width: 20px;
    height: 20px;
    float: left;
    margin: 0 6px 0 0;
}

._bold_txt {
    font-weight: 600;
}

._light_txt {
    color: var(--SOFTBLUE);
    font-weight: 300;
}

